--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
         <form method="post">
             <textarea name="content" placeholder="// Start typing your code here..." autofocus></textarea>
             <div class="actions">
-                <button type="submit">Save Paste</button>
+                <button type="submit" class="share-button">Save Paste</button>
             </div>
         </form>
     </main>
