--- a/templates/index.html
+++ b/templates/index.html
@@ -24,5 +24,13 @@
             </div>
         </form>
     </main>
+
+    <footer class="footer">
+        <div class="container">
+            <p>Powered by <a href="https://zluqe.org/" target="_blank">Zluqe</a>
+            <p>© 2025 Zluqe • <a href="https://zluqe.org/privacy-policy">Privacy</a> • <a href="https://zluqe.org/terms-of-service">Terms</a></p>
+        </div>
+    </footer>
+
 </body>
 </html>
