--- a/templates/view_paste.html
+++ b/templates/view_paste.html
@@ -11,9 +11,7 @@
             <a href="{{ url_for('index') }}" class="logo">Zluqet</a>
             <div class="nav-buttons">
                 <button class="nav-button" onclick="window.location.href='{{ url_for('index') }}'">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                        <path d="M2 2h12v12H2V2zm1 1v10h10V3H3zm4 2h2v6H7V5z"/>
-                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2.5" stroke-linecap="butt" stroke-linejoin="arcs"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
                     New Paste
                 </button>
     
