--- a/templates/view_paste.html
+++ b/templates/view_paste.html
@@ -10,27 +10,47 @@
         <div class="container">
             <a href="{{ url_for('index') }}" class="logo">Zluqet</a>
             <div class="nav-buttons">
+    
+                <!-- New Paste -->
                 <button class="nav-button" onclick="window.location.href='{{ url_for('index') }}'">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2.5" stroke-linecap="butt" stroke-linejoin="arcs"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-plus" viewBox="0 0 16 16">
+                        <path d="M8 6a.5.5 0 0 1 .5.5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1A.5.5 0 0 1 8 6z"/>
+                        <path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zm-3-.5a.5.5 0 0 0-.5-.5H9V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V5h-2V4z"/>
+                    </svg>
                     New Paste
                 </button>
     
+                <!-- Raw Text -->
+                <button class="nav-button" onclick="window.location.href='{{ url_for('raw_paste', key=paste.key) }}'">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-code" viewBox="0 0 16 16">
+                        <path d="M5.854 6.146a.5.5 0 1 0-.708.708L6.293 8 5.146 9.146a.5.5 0 0 0 .708.708l1.5-1.5a.5.5 0 0 0 0-.708l-1.5-1.5z"/>
+                        <path d="M8.146 6.146a.5.5 0 0 1 .708 0l1.5 1.5a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 1 1-.708-.708L9.293 8 8.146 6.854a.5.5 0 0 1 0-.708z"/>
+                        <path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zm-3-.5a.5.5 0 0 0-.5-.5H9V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V5h-2V4z"/>
+                    </svg>
+                    Raw Text
+                </button>
+                
+                <!-- Edit -->
                 <button class="nav-button" onclick="window.location.href='{{ url_for('dupe_paste', key=paste.key) }}'">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                        <path d="M5 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V6.5L9.5 2H5zm4 1.5L13.5 6H9V3.5z"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                        <path d="M15.502 1.94a.5.5 0 0 1 0 .706l-1.71 1.71-2.121-2.12 1.709-1.71a.5.5 0 0 1 .706 0l1.416 1.414z"/>
+                        <path d="M11.75 2.647l2.12 2.122-6.897 6.896a.5.5 0 0 1-.168.106l-2.477.825a.25.25 0 0 1-.316-.316l.825-2.477a.5.5 0 0 1 .106-.168l6.897-6.896z"/>
+                        <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 1 2.5 12h5a.5.5 0 0 1 0 1h-5A.5.5 0 0 0 2 13.5v.5h9a.5.5 0 0 1 0 1H2a1 1 0 0 1-1-1v-1z"/>
+                        <path fill-rule="evenodd" d="M11.5 3a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 11.5 3z"/>
                     </svg>
                     Edit
                 </button>
     
+                <!-- Share -->
                 <button class="nav-button" onclick="copyToClipboard()">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                        <path d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.499 2.499 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5zm-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zm11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3z"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-share-fill" viewBox="0 0 16 16">
+                        <path d="M13.5 1a1.5 1.5 0 0 0-1.06 2.56l-7.453 3.72a1.5 1.5 0 1 0 0 2.44l7.453 3.72a1.5 1.5 0 1 0 .606-.792l-7.453-3.72a1.49 1.49 0 0 0 0-.856l7.453-3.72A1.5 1.5 0 0 0 13.5 1z"/>
                     </svg>
                     Share
                 </button>
             </div>
         </div>
-    </nav>
+    </nav>    
     
     <script>
         function copyToClipboard() {
