--- a/static/style.css
+++ b/static/style.css
@@ -270,6 +270,35 @@ body.error-page {
     opacity: 0.9;
 }
 
+/* Scrollbar */
+/* Adapted from: https://codepen.io/GhostRider/pen/oNvoNv */
+.scrollbar {
+  margin-left: 30px;
+  float: left;
+  height: 300px;
+  width: 65px;
+  background: #F5F5F5;
+  overflow-y: scroll;
+  margin-bottom: 25px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 10px;
+  background-color: #444444;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: #222222;
+}
+
 /* Responsive Tweaks */
 @media (max-width: 768px) {
     .navbar {
