--- a/static/style.css
+++ b/static/style.css
@@ -296,8 +296,13 @@ body.error-page {
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-  background-color: #222222;
+  background-color: var(--border-color);
 }
+
+::-webkit-scrollbar-corner {
+    background-color: #444444;
+  }
+  
 
 /* Responsive Tweaks */
 @media (max-width: 768px) {
