--- a/templates/cold/head.ejs
+++ b/templates/cold/head.ejs
@@ -5,7 +5,7 @@
 <meta property="og:title" content="Zluqet">
 <meta property="og:description" content="A simple open source paste service">
 <meta property="og:image" content="https://raw.githubusercontent.com/Zluqe/logo/refs/heads/main/z.png">
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<link rel="stylesheet" href="/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/base16/material-palenight.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-<link rel="icon" type="image/x-icon" href="static/logo/logo.png">
+<link rel="icon" type="image/x-icon" href="/logo/logo.png">
